feat: create towers
